--- a/cryptopear/package.json
+++ b/cryptopear/package.json
@@ -13,11 +13,13 @@
     "@mui/styled-engine-sc": "^5.10.6",
     "@stacks/connect": "^7.0.0",
     "@stacks/connect-react": "^20.0.0",
-    "@stacks/network": "^5.0.0",
+    "@stacks/network": "^6.3.0",
+    "@stacks/storage": "^6.3.0",
     "@stacks/transactions": "^5.0.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.0",
+    "axios": "^1.3.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
